@@ -175,9 +175,14 @@ abstract class Smarty_CacheResource_KeyValueStore extends Smarty_CacheResource {
             $tpl = new $smarty->template_class($resource_name, $smarty);
             if ($tpl->source->exists) {
                 $uid = $tpl->source->uid;
-             }
+            }
+            
+            // TODO: uwe.tews check if $tpl->compile_id vs. $compile_id  is correct
+            // from what I can see $tpl->compile_id would always be null?!
+            
             // remove from template cache
-            unset($smarty->template_objects[sha1($smarty->joined_template_dir . $tpl->template_resource . $tpl->cache_id . $tpl->compile_id)]);
+            $_templateId = sha1($tpl->source->unique_resource . $tpl->cache_id . $tpl->compile_id);
+            unset($smarty->template_objects[$_templateId]);
         }
         return $uid;
     }
