@@ -245,7 +245,8 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase {
     public function getSubTemplate($template, $cache_id, $compile_id, $caching, $cache_lifetime, $data, $parent_scope)
     {
         // already in template cache?
-        $_templateId = sha1($this->smarty->joined_template_dir.$template . $cache_id . $compile_id);
+        $unique_template_name = Smarty_Resource::getUniqueTemplateName($this->smarty, $template);
+        $_templateId =  sha1($unique_template_name . $cache_id . $compile_id);
         if (isset($this->smarty->template_objects[$_templateId])) {
             // clone cached template object because of possible recursive call
             $tpl = clone $this->smarty->template_objects[$_templateId];
@@ -606,7 +607,8 @@ class Smarty_Internal_Template extends Smarty_Internal_TemplateBase {
                 // cache template object under a unique ID
                 // do not cache eval resources
                 if ($this->source->type != 'eval') {
-                    $this->smarty->template_objects[sha1($this->smarty->joined_template_dir.$this->template_resource . $this->cache_id . $this->compile_id)] = $this;
+                    $_templateId = sha1($this->source->unique_resource . $this->cache_id . $this->compile_id);
+                    $this->smarty->template_objects[$_templateId] = $this;
                 }
                 return $this->source;
 
